[tool.poetry]
name = "seatools"
version = "1.0.0"
description = ""
authors = ["hanlearned <hanlearned99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pytest = "^7.4.0"
twine = "^4.0.2"

[[tool.poetry.source]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
